2007-06-05  Carlos Garcia Campos <carlosgc@gsyc.escet.urjc.es>

	* setup.py: 

	Install manpage under $prefix instead of /usr

2007-05-10  Israel Herraiz  <herraiz@gsyc.escet.urjc.es>

	* pycvsanaly/commit.py:
	* pycvsanaly/files.py:
	* pycvsanaly/main.py:
	* pycvsanaly/repository.py:
	* pycvsanaly/tables.py:
	* setup.py:

	Fixing bug #268. Some information in the database was incorrect.
	
2007-04-23  Israel Herraiz  <herraiz@gsyc.escet.urjc.es>

	* setup.py:
	* cvsanaly.1:
	* MANIFEST.in:

	Added installation of the man page using Python distutils. A little 
	hack in the setup.py file was needed.

2007-04-23  Carlos Garcia Campos <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly/repository.py:
	* pycvsanaly/main.py:

	Create repository objects based on logfile instead of checkout dir
	when a logfile is provided. Fixes bug #247.

2007-04-20  Israel Herraiz  <herraiz@gsyc.escet.urjc.es>

	* debian/changelog:

	Fixed version number of Debian package


2007-04-18  Carlos Garcia Campos <carlosgc@gsyc.escet.urjc.es>

	* NEWS:
	* README:

	Release 1.0.1

2007-04-18  Carlos Garcia Campos <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly/main.py:

	Allow running more than one plugin at the same cvsanaly invocation.  

2007-04-18  Carlos Garcia Campos <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly/main.py:

	Create and fill database when it doesn't exists before running a
	plugin. Fixes bug #256.

2007-04-18  Israel Herraiz  <herraiz@gsyc.escet.urjc.es>

	* debian/control:

	Added dependency cvs | subversion to the Debian package

2007-04-18  Carlos Garcia Campos <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly/plugins/graphs/__init__.py:

	Check whether ploticus and gnuplot are installed before using them. If
	one of them is not present the graph that requires it is skipped.
	Fixes bug #259. 

2007-04-17  Carlos Garcia Campos <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly/plugins/generations/generations.py:

	Create graphs in generations plugin. 
